--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
