--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^11.15.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
